--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skydropx-api-sdk",
   "version": "1.0.0",
-  "description": "SDK profesional para la API de Skydropx - Automatiza envíos, cotizaciones y recolecciones",
+  "description": "SDK para la API de Skydropx - Automatiza envíos, cotizaciones y recolecciones",
   "main": "src/clients/javascript/SkydropxClient.js",
   "scripts": {
     "test": "jest --coverage",
@@ -29,12 +29,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/skydropx-api-sdk"
+    "url": "https://github.com/Docxter/Skydropx-API"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/skydropx-api-sdk/issues"
+    "url": "https://github.com/Docxter/Skydropx-API"
   },
-  "homepage": "https://github.com/yourusername/skydropx-api-sdk#readme",
+  "homepage": "https://github.com/Docxter/Skydropx-API",
   "dependencies": {
     "axios": "^1.6.2",
     "dotenv": "^16.3.1"
